--- a/main.html
+++ b/main.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+<style>
+/* Movie poster styling */
+.moviePic {
+  width: 300px;
+  height: 450px;
+  opacity: 0.9;
+  display: block;
+  margin: 40px auto 20px auto; /* centers the image horizontally with margin */
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
 
+/* Movie description styling */
+.movieDetail {
+  position: relative;
+  top: 0;
+  width: 60%;
+  margin: 0 auto; /* center horizontally */
+  text-align: center;
+  font-size: 18px;
+  line-height: 1.5;
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+</style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<!-- Movie Poster -->
+<img src="https://via.placeholder.com/300x450" alt="Movie Poster" class="moviePic">
+
+<!-- Movie Description -->
+<p class="movieDetail">
+  In a world where AI governs every aspect of life, a group of rebels must fight against the system to reclaim humanity and freedom. This thrilling adventure blends action, suspense, and thought-provoking questions about the future of technology.
+</p>
 
 </body>
-
 </html>
